--- a/pages/search/index.wxml
+++ b/pages/search/index.wxml
@@ -1,30 +1,39 @@
 <view class="search">
-  <block wx:if="{{!isDisplaySearchInput}}">
-    <view class="choose_item">
-    <button class="btn" bindtap="handleAccordingName">名称搜索</button>
-    <button class="btn" bindtap="handleAccordingId">设备号搜索</button>
-    <button class="btn" bindtap="handleAccordingBrand">品牌搜索</button>
-    </view>
-  </block>
-  <block wx:else>
-    <SearchInput placeholder="{{placeholder}}" bindclickSearchButton="handleClickSearchButton" bindclickCancelButton="handleClickCancelButton">
-    </SearchInput>
 
-    <view class="product_wrap" wx:for="{{productsList}}" wx:key="id"> 
-      <view class="product_item">
-        <view class="item_left">
-          <view class="item_name">name:{{item.name}}</view>
-          <view class="item_brandName">brandName:{{item.brandName}}</view>
-          <view class="item_principal">principal:{{item.principal}}</view>
-          <view class="item_value">¥{{item.value}}</view>
-        </view>
+  <view class="top_search_wrap">
+    <view class="input_wrap">
+      <input type="text" value="{{searchInput}}" placeholder="请根据名称进行搜索" bindinput="handleInput"></input>
+    </view>
+    <view class="search_btn_wrap">
+      <button bindtap="handleClickCancelButton">取消</button>
+      <button bindtap="handleClickSearchButton">搜索</button>
+    </view>
+  </view>
+
+
+  <view class="product_wrap" wx:for="{{productsList}}" wx:key="id"> 
+    <view class="product_item">
+      <view class="item_name_wrap item_wrap">
+        <view class="item_name_title item_title"><label>名称</label></view>
+        <view class="item_name_content item_content">{{item.name}}</view>
+      </view> 
+      <view class="item_brandName_wrap item_wrap">
+        <view class="item_brandName_title item_title"><label>品牌名</label></view>
+        <view class="item_brandName_content item_content">{{item.brandName}}</view>
       </view>
-      <view class="btn_wrap">
-        <view>
-          <button  bindtap="handleSelect" data-index="{{index}}">选取</button>
-        </view>
+      <view class="item_principal_wrap item_wrap">
+        <view class="item_principal_title item_title"><label>负责人</label></view>  
+        <view class="item_principal_content item_content">{{item.principal}}</view>
+      </view>
+      <view class="item_value_wrap item_wrap">
+        <view class="item_value_title item_title"><label>价格</label></view>
+        <view class="item_value_content item_content">¥{{item.value}}</view>
       </view>
     </view>
-  </block>
-
+    <view class="btn_wrap">
+      <view>
+        <button bindtap="handleSelect" data-index="{{index}}">选取</button>
+      </view>
+    </view>
+  </view>
 </view>
