--- a/pages/search/index.wxss
+++ b/pages/search/index.wxss
@@ -1,30 +1,55 @@
 page{
   margin-top: 20rpx;
 }
-.search .choose_item{
-  margin-top: 480rpx;
+.search{
+  padding: 10rpx;
 }
-.search .choose_item .btn{
-  width: 95%;
-  height: 100%;
-  margin: 30rpx 18rpx;
-  background-color: rgb(57, 57, 204);
-  border-radius: 20rpx;
+
+.search .top_search_wrap{
+  display: flex;
+  flex-direction: row;
+  margin: 20rpx;
+}
+.search .top_search_wrap .input_wrap{
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 47%;
+  height: 60rpx;
+  border-radius: 30rpx;
+  background-color: #fff;
+}
+.search .top_search_wrap .input_wrap input{
+  height: 60rpx;
+  width: 100%;
+  padding-left: 25rpx;
+}
+.search .top_search_wrap .search_btn_wrap{
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  /* margin-left: 20rpx; */
+}
+.search .top_search_wrap .search_btn_wrap button{
+  margin-left: 10rpx;
+  height: 60rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20rpx;
+  background-color: rgb(57, 57, 204);
+  border-radius: 30px;
   color: rgb(224, 221, 221);
   font-weight: 580;
 }
+
+
 .product_wrap{
   margin: 20rpx;
   display: flex;
-  /* background-color: #fff; */
-  /* padding: 20rpx; */
   height: 300rpx;
 }
 .product_wrap .product_item{
-  /* margin-top: 20rpx; */
   padding: 20rpx;
   border-radius: 20rpx;
   background-color: #fff;
@@ -33,30 +58,31 @@ page{
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   font-weight: 550rpx;
   font-size: 36rpx;
-
+  font-family: serif;
 }
-.item_left{
-  background-color: #fff;
-}
-.item_brandName{
-  background-color: #fff;
-}
-.item_principal{
-    background-color: #fff;
-}
-.item_name{
-  background-color: #fff;
-  /* font-family: 宋体; */
-}
-.item_value{
-  color: rgb(223, 55, 43);
-  background-color: #fff;
+.item_wrap{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+
+  margin-bottom: 10rpx;
 }
+.item_wrap .item_title{
+  width: 200rpx;
+  font-size: 40rpx;
+  background-color: #fff;
+}
+.item_content{
+  width: 180rpx;
+  font-size: 40rpx;
+  background-color: #fff;
+}
+.item_value_content{
+  color: #f00;
+}
+
 .btn_wrap view{
   margin: 0;
   padding: 0;
@@ -65,10 +91,10 @@ page{
   background-color: rgb(204, 140, 57);
   width: 92%;
   margin: 0;
+  margin-left: 16rpx;
   height: 300rpx;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
-
 }
