--- a/pages/verification/index.wxss
+++ b/pages/verification/index.wxss
@@ -3,6 +3,9 @@ page{
 }
 .user_form{
   margin: 20rpx;
+  /* margin-top: 120rpx; */
+  /* background-color: #fff; 
+  border-radius: 15rpx; */
 }
 .single_item{
   display: flex;
@@ -11,24 +14,25 @@ page{
   height: 87rpx;
   font-size: 34rpx;
   font-weight: 450rpx;
+  /* margin: 20rpx; */
   border-bottom: 1px solid #b6b3b3;
   margin-bottom: 20rpx;
 }
 .item_input{
-  /* background-color: #f00; */
   padding-left: 15rpx;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.item_input input{ 
+.item_input input{
   height: 100%;
 }
 .item_title{
-  /* background-color: #fff; */
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  /* padding-left: 20rpx; */
+  /* background-color: #fff; */
   width: 230rpx;
   padding-left: 15rpx;
 }
@@ -41,15 +45,26 @@ page{
 .but{
   margin-top: 100rpx;
   display: flex;
+  flex-direction: row;
+  display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
-  margin-bottom: 45rpx;
+  /* margin-left: 30rpx; */
+  /* background-color: #fff; */
 }
 .submit_btn{
   margin-left: 30rpx;
 }
+/* .user_signature_item{
+  width: 100%;
+  height: 260rpx;
+  background-color: #fff;
+} */
 .img{
+  /* margin-left: 270rpx; */
   width: 100%;
   height: 280rpx;
+  /* float: left; */
+  /* overflow: hidden; */
+  /* orientation: landscape; */
 }
