完善查看历史记录界面和归还物品界面

--- a/pages/query_history/index.wxss
+++ b/pages/query_history/index.wxss
@@ -31,7 +31,7 @@ page{
   /* margin-left: 20rpx; */
 }
 .search .top_search_wrap .search_btn_wrap button{
-  margin-left: 10rpx;
+  margin-left: 16rpx;
   height: 60rpx;
   display: flex;
   justify-content: center;
@@ -57,44 +57,28 @@ page{
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column;
   font-weight: 550rpx;
-  font-size: 36rpx;
+  font-size: 20rpx;
   font-family: serif;
 }
 .item_wrap{
   display: flex;
   flex-direction: row;
-
+  width: 100%;
   margin-bottom: 10rpx;
 }
 .item_wrap .item_title{
-  width: 200rpx;
+  width: 50%;
   font-size: 40rpx;
   background-color: #fff;
 }
 .item_content{
-  width: 180rpx;
+  width: 50%;
   font-size: 40rpx;
   background-color: #fff;
 }
 .item_value_content{
   color: #f00;
-}
-
-.btn_wrap view{
-  margin: 0;
-  padding: 0;
-}
-.btn_wrap view button{
-  background-color: rgb(204, 140, 57);
-  width: 92%;
-  margin: 0;
-  margin-left: 16rpx;
-  height: 300rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
 }
