--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -48,6 +48,12 @@
       </navigator>
     </view>
 
+    <view class="return">
+      <navigator url="../../pages/return/index">
+        <label>返还物品</label>
+      </navigator>
+    </view>
+
   </view>
 
   <view class="contact">
