--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -68,7 +68,7 @@ page{
 
 
 .select_button{
-  height: 220rpx;
+  height: 320rpx;
   margin-top: 40rpx;
   background-color: #fff;
   display: flex;
@@ -85,6 +85,11 @@ page{
   padding: 20rpx;
 }
 .query_history navigator{
+  background-color: #fff;
+  padding: 20rpx;
+}
+
+.return navigator{
   background-color: #fff;
   padding: 20rpx;
 }
