--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,6 @@
 .page{
   margin: 10rpx;
+  color: #777;
 }
 swiper {
   /* width: 700rpx; */
@@ -11,21 +12,61 @@ swiper image {
   border-radius: 30rpx;
   width: 100%;
 }
+
+.product_wrap{
+  /* margin: 20rpx; */
+  margin-top: 20rpx;
+  display: flex;
+  height: 300rpx;
+}
+.product_wrap .product_item{
+  padding: 20rpx;
+  border-radius: 20rpx;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-direction: column;
+  font-weight: 550rpx;
+  font-size: 20rpx;
+  font-family: serif;
+}
+.item_wrap{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 10rpx;
+}
+.item_wrap .item_title{
+  width: 50%;
+  font-size: 40rpx;
+  background-color: #fff;
+}
+.item_content{
+  width: 50%;
+  font-size: 40rpx;
+  background-color: #fff;
+}
+.item_value_content{
+  color: #f00;
+}
 .clarify{
-  margin-top: 200rpx;
+  margin-top: 80rpx;
   align-items:center;
   justify-content: center;
   display: flex;
   height: 200rpx;
-  /* background-color: #fff; */
+  background-color: #fff;
   border-radius: 20rpx;
 }
 .clarify view{
   align-items:center;
   justify-content: center;
-  /* background-color: #fff; */
+  background-color: #fff;
   font-size: 50rpx;
   font-family: serif;
   font-weight: 400;
-  color: #f00;
+  color: rgb(94, 89, 89); 
 }
